--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "qrcode": "^1.5.3",
     "vant": "^4.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
