--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV = 'production'
 VUE_APP_TITLE = 'production'
-VUE_APP_BASE_URL = '/'
-VUE_APP_BASE_HOST = 'http://10.220.21.89:8088'
+VUE_APP_BASE_URL = '/proxy/ymtopm'
+VUE_APP_BASE_HOST = 'http://113.246.57.87:8830'
