bugfix: 一码通小程序的网吧展示随机码修复

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 NODE_ENV = 'development'
 VUE_APP_TITLE = 'development'
-VUE_APP_BASE_URL = '/ymtopm'
-# VUE_APP_BASE_HOST = 'http://192.168.1.17:9433'
+VUE_APP_BASE_URL = '/'
+VUE_APP_BASE_HOST = 'http://192.168.1.24:9433'
 # 鹏哥本地
-VUE_APP_BASE_HOST = 'http://10.220.21.89:8088'
+# VUE_APP_BASE_HOST = 'http://10.220.21.89:8088'
