--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV = 'production'
 VUE_APP_TITLE = 'production'
-VUE_APP_BASE_URL = '/proxy/ymtopm'
-VUE_APP_BASE_HOST = 'http://113.246.57.87:8830'
+VUE_APP_BASE_URL = '/proxy'
+VUE_APP_BASE_HOST = 'https://mobile.zwfw.hunan.gov.cn:8088'
