--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "less-loader": "^11.1.3",
     "qrcode": "^1.5.3",
     "vant": "^4.7.0",
+    "nanoid": "^3.3.6",
+    "crypto-js": "^4.1.1",
+    "jsencrypt": "^3.3.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
