--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
-    "weixin-js-sdk": "^1.6.0"
+    "weixin-js-sdk": "^1.6.0",
+    "babel-eslint": "^8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
