--- a/package.json
+++ b/package.json
@@ -12,23 +12,22 @@
   "dependencies": {
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "js-cookie": "^3.0.5",
+    "jsencrypt": "^3.3.1",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "nanoid": "^3.3.6",
     "qrcode": "^1.5.3",
     "vant": "^4.7.0",
-    "nanoid": "^3.3.6",
-    "crypto-js": "^4.1.1",
-    "jsencrypt": "^3.3.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
-    "weixin-js-sdk": "^1.6.0",
-    "babel-eslint": "^8.2.1"
+    "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/eslint-parser": "^7.23.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
