--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 NODE_ENV = 'development'
 VUE_APP_TITLE = 'development'
 VUE_APP_BASE_URL = '/'
-VUE_APP_BASE_HOST = 'http://192.168.110.57:9433'
+VUE_APP_BASE_HOST = 'http://localhost:3000'
 # 鹏哥本地
 # VUE_APP_BASE_HOST = 'http://10.220.75.31:31986'
