bugfix：修改点击进入页面，顶部文字为“app-ymt”，应改成一码通字符

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV = 'production'
 VUE_APP_TITLE = 'production'
-VUE_APP_BASE_URL = '/proxy'
-VUE_APP_BASE_HOST = 'https://mobile.zwfw.hunan.gov.cn:8088'
+VUE_APP_BASE_URL = '/'
+VUE_APP_BASE_HOST = 'www.queyachi.online/proxy'
